--- a/app/src/main/res/layout/content_graph.xml
+++ b/app/src/main/res/layout/content_graph.xml
@@ -51,6 +51,8 @@
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
                     android:src="@drawable/ic_undo_white_48dp"
+                    android:id="@+id/undo_icon"
+                    android:onClick="undoClick"
                     />
                 <ImageView
                     android:layout_width="wrap_content"
@@ -58,6 +60,8 @@
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
                     android:src="@drawable/ic_redo_white_48dp"
+                    android:id="@+id/redo_icon"
+                    android:onClick="redoClick"
                     />
             </LinearLayout>
 
