--- a/app/src/main/res/layout-large-land/nav_drawer_graph.xml
+++ b/app/src/main/res/layout-large-land/nav_drawer_graph.xml
@@ -47,25 +47,10 @@
             android:gravity="center"
             android:text="@string/load_from_file" />
     </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_drawer_item_padding"
-        android:paddingBottom="@dimen/nav_drawer_item_padding"
-        android:paddingLeft="@dimen/nav_drawer_item_padding"
-        android:paddingRight="@dimen/nav_drawer_item_padding"
-        android:textColor="@color/nav_drawer_text_color"
-        android:textSize="@dimen/nav_drawer_item_text_size"
-        android:gravity="center"
-        android:id="@+id/switch_directed_undirected_item"
-        android:background="@drawable/blink"
-        android:text="@string/switch_directed_undirected_item"
-        android:onClick="switchDirectedUndirected"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="showAlgorithms"
-        android:background="@drawable/blink">
+        android:onClick="showAlgorithms">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -99,8 +84,7 @@
             android:textColor="@color/nav_drawer_text_color"
             android:textSize="@dimen/nav_drawer_item_text_size"
             android:gravity="center"
-            android:id="@+id/dfs_item"
-            android:background="@drawable/blink"
+            android:onClick="PerformDFS"
             android:text="@string/dfs_algorithm" />
         <TextView
             android:layout_width="wrap_content"
@@ -112,8 +96,6 @@
             android:textColor="@color/nav_drawer_text_color"
             android:textSize="@dimen/nav_drawer_item_text_size"
             android:gravity="center"
-            android:id="@+id/prim_item"
-            android:background="@drawable/blink"
             android:onClick="performPrim"
             android:text="@string/prims_algorithm" />
         <TextView
@@ -126,9 +108,7 @@
             android:textColor="@color/nav_drawer_text_color"
             android:textSize="@dimen/nav_drawer_item_text_size"
             android:gravity="center"
-            android:id="@+id/kruskal_item"
             android:onClick="performKruskal"
-            android:background="@drawable/blink"
             android:text="@string/kruskals_algorithm" />
         <TextView
             android:layout_width="wrap_content"
@@ -140,8 +120,7 @@
             android:textColor="@color/nav_drawer_text_color"
             android:textSize="@dimen/nav_drawer_item_text_size"
             android:gravity="center"
-            android:id="@+id/dijkstra_item"
-            android:background="@drawable/blink"
+            android:onClick="performDijkstra"
             android:text="@string/dijkstras_algorithm" />
     </LinearLayout>
     <LinearLayout
