Refactor main activity. Split drawer to fragments

--- a/app/src/main/res/layout/nav_drawer_graph.xml
+++ b/app/src/main/res/layout/nav_drawer_graph.xml
@@ -1,167 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="240dp"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_gravity="start"
     android:background="@color/material_grey_600">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="saveGraphToFile">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:src="@drawable/ic_save_white_48dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:text="@string/save_to_file" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="loadGraphFromFile">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:src="@drawable/ic_folder_open_white_48dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:text="@string/load_from_file" />
-    </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_drawer_item_padding"
-        android:paddingBottom="@dimen/nav_drawer_item_padding"
-        android:paddingLeft="@dimen/nav_drawer_item_padding"
-        android:paddingRight="@dimen/nav_drawer_item_padding"
-        android:textColor="@color/nav_drawer_text_color"
-        android:textSize="@dimen/nav_drawer_item_text_size"
-        android:gravity="center"
-        android:id="@+id/switch_directed_undirected_item"
-        android:background="@drawable/blink"
-        android:text="@string/switch_directed_undirected_item"
-        android:onClick="switchDirectedUndirected"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="showAlgorithms"
-        android:background="@drawable/blink">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:src="@drawable/ic_trending_up_white_48dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:text="@string/perform_algorithm" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/algorithm_layout"
-        android:paddingLeft="50dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:id="@+id/dfs_item"
-            android:background="@drawable/blink"
-            android:text="@string/dfs_algorithm" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:id="@+id/prim_item"
-            android:background="@drawable/blink"
-            android:onClick="performPrim"
-            android:text="@string/prims_algorithm" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:id="@+id/kruskal_item"
-            android:onClick="performKruskal"
-            android:background="@drawable/blink"
-            android:text="@string/kruskals_algorithm" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:id="@+id/dijkstra_item"
-            android:background="@drawable/blink"
-            android:text="@string/dijkstras_algorithm" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="showHelp">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_drawer_item_padding"
-            android:paddingBottom="@dimen/nav_drawer_item_padding"
-            android:paddingLeft="@dimen/nav_drawer_item_padding"
-            android:paddingRight="@dimen/nav_drawer_item_padding"
-            android:src="@drawable/ic_help_outline_white_48dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/nav_drawer_text_color"
-            android:textSize="@dimen/nav_drawer_item_text_size"
-            android:gravity="center"
-            android:text="@string/show_help" />
-    </LinearLayout>
-</LinearLayout>
+    <fragment
+        android:name="takahawk.graphsintouch.DrawerMainFragment"
+        android:id="@+id/drawer_main_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/drawer_main_fragment" />
+</FrameLayout>
