--- a/app/src/main/res/layout-large-land/content_graph.xml
+++ b/app/src/main/res/layout-large-land/content_graph.xml
@@ -21,6 +21,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
+                    android:background="@drawable/blink"
                     android:src="@drawable/ic_add_circle_outline_white_48dp"
                     android:id="@+id/add_node_icon"
                     />
@@ -29,6 +30,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
+                    android:background="@drawable/blink"
                     android:src="@drawable/ic_trending_flat_white_48dp"
                     android:onClick="switchAddEdgeMode"
                     android:id="@+id/add_edge_icon"
@@ -38,6 +40,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
+                    android:background="@drawable/blink"
                     android:src="@drawable/ic_create_white_48dp"
                     />
                 <ImageView
@@ -45,13 +48,16 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
+                    android:background="@drawable/blink"
                     android:src="@drawable/ic_clear_white_48dp"
+                    android:id="@+id/delete_icon"
                     />
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
+                    android:background="@drawable/blink"
                     android:src="@drawable/ic_undo_white_48dp"
                     android:id="@+id/undo_icon"
                     android:onClick="undoClick"
@@ -61,6 +67,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft = "5dp"
                     android:paddingRight = "5dp"
+                    android:background="@drawable/blink"
                     android:src="@drawable/ic_redo_white_48dp"
                     android:id="@+id/redo_icon"
                     android:onClick="redoClick"
