--- a/app/src/main/res/layout/drawer_algorithms_fragment.xml
+++ b/app/src/main/res/layout/drawer_algorithms_fragment.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:id="@+id/algorithm_layout"
     android:orientation="vertical"
     android:background="@color/material_grey_600">
