--- a/app/src/main/res/layout-land/content_graph.xml
+++ b/app/src/main/res/layout-land/content_graph.xml
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft = "5dp"
             android:paddingRight = "5dp"
+            android:id="@+id/edit_icon"
             android:background="@drawable/blink"
             android:src="@drawable/ic_create_white_48dp"
             />
