--- a/app/src/main/res/layout/content_graph.xml
+++ b/app/src/main/res/layout/content_graph.xml
@@ -89,11 +89,14 @@
         <EditText
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content" />
+            android:layout_width="wrap_content"
+            android:inputType="numberDecimal"
+            android:id="@+id/edit_value"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/edit_button_text"/>
+            android:text="@string/edit_button_text"
+            android:onClick="changeValue"/>
     </LinearLayout>
 
         <FrameLayout
